Add actual filenames of Rmd files to be used to render the CV

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,6 +2,28 @@ output_dir: "docs"
 rmd_files:
   - "index.Rmd"
   - "education.Rmd"
+  - "additional_training.Rmd"
+  - "research.Rmd"
+  - "professional.Rmd"
+#  - "selected_pubs.Rmd"
+  - "selected_presentations.Rmd"
   - "awards.Rmd"
+  - "supervision.Rmd"
+  - "teaching.Rmd"
+  - "certifications_membership.Rmd"
+  - "funding.Rmd"
+  - "editorial.Rmd"
+  - "committees.Rmd"
+  - "ad_hoc.Rmd"
+  - "academic_jury.Rmd"
+  - "references.Rmd"
+  - "skills.Rmd"
+  - "research_projects.Rmd"
+  - "outreach.Rmd"
+  - "publications.Rmd"
+  - "presentations.Rmd"
+  - "abstracts.Rmd"
+  - "visibility.Rmd"
+  - "appendix_research_projects.Rmd"
 book_filename: "MoreiraDC_CV"
 delete_merged_file: true
