Add new strong.lua reference

--- a/_output.yml
+++ b/_output.yml
@@ -5,11 +5,13 @@ vitae::awesomecv:
   keep_md: yes
   pandoc_args:
     # - --lua-filter="lua/multiple-bibliographies.lua"
-    - --lua-filter="lua/strong.lua"
+    # - --lua-filter="lua/strong.lua"
+    - --lua-filter="lua/strong_testing.lua"
 vitae::markdowncv:
   theme: kjhealy
   keep_md: yes
   pandoc_args:
     # - --lua-filter="lua/multiple-bibliographies.lua"
-    - --lua-filter="lua/strong.lua"
+    # - --lua-filter="lua/strong.lua"
+    - --lua-filter="lua/strong_testing.lua"
   
