--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -20,7 +20,7 @@ rmd_files:
   - "skills.Rmd"
   - "research_projects.Rmd"
   - "outreach.Rmd"
-  - "publications.Rmd"
+#  - "publications.Rmd"
   - "presentations.Rmd"
   - "abstracts.Rmd"
   - "visibility.Rmd"
