--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,7 +5,7 @@ rmd_files:
   - "additional_training.Rmd"
   - "research.Rmd"
   - "professional.Rmd"
-#  - "selected_pubs.Rmd"
+  - "selected_pubs.Rmd"
   - "selected_presentations.Rmd"
   - "awards.Rmd"
   - "supervision.Rmd"
@@ -17,13 +17,14 @@ rmd_files:
   - "ad_hoc.Rmd"
   - "academic_jury.Rmd"
   - "references.Rmd"
-  - "skills.Rmd"
+#  - "skills.Rmd"
   - "research_projects.Rmd"
   - "outreach.Rmd"
-#  - "publications.Rmd"
+  - "publications.Rmd"
   - "presentations.Rmd"
   - "abstracts.Rmd"
   - "visibility.Rmd"
   - "appendix_research_projects.Rmd"
+  - "appendix_skills.Rmd"
 book_filename: "MoreiraDC_CV"
 delete_merged_file: true
